fix(backend:swagger): updated invalid path on swag comment
