# backend/swagger/swagger.yaml
@@ -223,22 +223,11 @@ info:
   title: Playstack
   version: "1.0"
 paths:
-  /auth/confirm-signup:
+  /auth/profile:
     post:
       consumes:
-      - application/x-www-form-urlencoded
-      description: Confirm a user's signup using OTP
-      parameters:
-      - description: User email
-        in: formData
-        name: email
-        required: true
-        type: string
-      - description: OTP code
-        in: formData
-        name: otp
-        required: true
-        type: string
+      - application/json
+      description: Get Profile Detail
       produces:
       - application/json
       responses:
@@ -254,10 +243,10 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/server.AuthResponse'
-      summary: Confirm signup
+      summary: Profile
       tags:
       - auth
-  /auth/login:
+  /auth/sessions:
     post:
       consumes:
       - application/x-www-form-urlencoded
@@ -291,30 +280,7 @@ paths:
       summary: Login user
       tags:
       - auth
-  /auth/profile:
-    post:
-      consumes:
-      - application/json
-      description: Get Profile Detail
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/server.AuthResponse'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/server.AuthResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/server.AuthResponse'
-      summary: Profile
-      tags:
-      - auth
-  /auth/refresh:
+  /auth/tokens:
     post:
       consumes:
       - application/json
@@ -337,7 +303,46 @@ paths:
       summary: Refresh access token
       tags:
       - auth
-  /auth/resend-otp:
+  /auth/users:
+    post:
+      consumes:
+      - application/x-www-form-urlencoded
+      description: Create a new user account
+      parameters:
+      - description: Name
+        in: formData
+        name: name
+        required: true
+        type: string
+      - description: Email
+        in: formData
+        name: email
+        required: true
+        type: string
+      - description: Password
+        in: formData
+        name: password
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/server.AuthResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/server.AuthResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/server.AuthResponse'
+      summary: Sign up a new user
+      tags:
+      - auth
+  /auth/verifications:
     post:
       consumes:
       - application/x-www-form-urlencoded
@@ -366,25 +371,20 @@ paths:
       summary: Resend OTP
       tags:
       - auth
-  /auth/signup:
+  /auth/verifications/confirm:
     post:
       consumes:
       - application/x-www-form-urlencoded
-      description: Create a new user account
+      description: Confirm a user's signup using OTP
       parameters:
-      - description: User name
-        in: formData
-        name: name
-        required: true
-        type: string
       - description: User email
         in: formData
         name: email
         required: true
         type: string
-      - description: User password
+      - description: OTP code
         in: formData
-        name: password
+        name: otp
         required: true
         type: string
       produces:
@@ -402,7 +402,7 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/server.AuthResponse'
-      summary: Sign up a new user
+      summary: Confirm signup
       tags:
       - auth
   /health/liveness:
